@@ -8,6 +8,8 @@ import org.example.snakesAndLadders.player.Player;
 import javax.persistence.EntityManager;
 import javax.persistence.EntityManagerFactory;
 import javax.persistence.Persistence;
+
+import java.util.ArrayList;
 import java.util.List;
 
 
@@ -138,7 +140,7 @@ public class BoardDAO {
             board = new Board();
             board.setSquares(squares);
             board.setPlayers(players);
-            board.setCurrentPlayer(players.getFirst());
+            board.setCurrentPlayer(players.get(0));
         } finally {
         	entityManager.close();
         }
